--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
 
       - name: Deploy to GCP VM
         run: |
+          echo "Deploying to ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}"
           ssh -i ~/.ssh/id_ed25519 "${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}" << 'EOF'
             cd /home/${{secrets.SSH_USER}}/auth-onboarding
             git pull
